# d2c

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  README.md  pyproject.toml  web-resources.md
.github/workflows/: ci.yml  release.yml  tests.yml
docs/: release.md  security.md  textual-readiness.md
eval/: README.md  baseline.md  corpus.yaml  phase68-results.md  phase87-corpus-v2.md
eval/fixtures/docs-site/docs/: guide.md  index.md  reference.md
eval/fixtures/json-config/config/: app.json  settings.yaml
eval/fixtures/python-package/: pyproject.toml
eval/fixtures/python-package/greeter/: __init__.py  util.py
eval/fixtures/python-package/tests/: test_util.py
eval/fixtures/refactor-mini/: README.md  config.py
eval/fixtures/refactor-mini/tests/: test_config.py
eval/fixtures/simple-cli/: README.md  cli.py
plans/: backlog-reconciliation.md  gaps-15-phases.md  master_plan.md  phase1-tools.md  phase10-deepseek.md  phase11-mcp.md  phase12-compaction-shapers.md  phase13-plugins.md  phase14-permission-modes.md  phase15-hook-events.md  phase16-worktree.md  phase17-sandbox.md  phase18-core-tools.md  phase19-streaming-executor.md  phase2-loop.md  phase20-deferred-schemas.md  phase21-path-rules.md  phase22-history.md  phase23-file-history.md  phase24-background-subagents.md  phase25-kairos.md  phase26-prompt-caching.md  phase27-command-parsing-ast.md  phase28-bpe-tokenizer.md  phase29-llm-summarization-shapers.md  phase3-permissions.md  phase30-cache-aligned-compaction.md  phase31-rich-repl-tui.md  phase32-workspace-trust.md  phase33-mcp-server.md  phase34-wire-inert-subsystems.md  phase35-output-token-recovery.md  phase36-real-slash-commands.md  phase37-stabilization-regression-audit.md  phase38-shell-permission-hardening.md  phase39-real-websearch-backend.md  phase4-persistence.md  phase40-remaining-hook-events.md  phase41-tool-breadth.md  phase42-release-hardening-fresh-install.md  (+52 more)
scripts/: check_fast.sh  check_release.sh
src/d2c/: __init__.py  __main__.py  approvals.py  compact.py  config.py  context.py  doctor.py  eval.py  eval_batch.py  file_history.py  history.py  hooks.py  kairos.py  loop.py  main.py  markdown_render.py  memory.py  observability.py  path_rules.py  permissions.py  persistence.py  provider_errors.py  sandbox.py  sdk.py  server.py  settings.py  streaming_executor.py  subagent.py  subagent_profiles.py  trust.py  untrusted.py  usage.py  user_prefs.py  worktree.py
src/d2c/mcp/: __init__.py  client.py  discovery.py  server.py
src/d2c/mcp/transports/: __init__.py  http.py  sse.py  stdio.py  websocket.py
src/d2c/permissions/: __init__.py  classifier.py
src/d2c/plugins/: __init__.py  loader.py  manifest.py
src/d2c/skills/: __init__.py  commit.md  loader.py
src/d2c/tools/: __init__.py  agent_tool.py  apply_patch.py  background_status.py  bash_tool.py  code_symbols.py  config_info.py  edit_tool.py  env_info.py  fs_tools.py  git_tools.py  glob_tool.py  grep_tool.py  memory_tool.py  notebook_edit.py  package_info.py  pool.py  read_range_tool.py  read_tool.py  skill_tool.py  structured_edit.py  task_tools.py  tool_search.py  web_fetch.py  web_search.py  write_tool.py
src/d2c/tui/: __init__.py  app.py  approvals.py  commands.py  markdown.py  widgets.py
tests/: conftest.py  test_bpe_tokenizer.py  test_cache_alignment.py  test_compact.py  test_compact_shapers.py  test_doctor.py  test_e2e.py  test_eval.py  test_eval_corpus.py  test_hooks.py  test_loop.py  test_loop_output_recovery.py  test_markdown_render.py  test_mcp.py  test_mcp_server.py  test_memory.py  test_observability.py  test_permissions.py  test_persistence.py  test_phase10.py  test_phase18.py  test_phase19.py  test_phase20.py  test_phase21.py  test_phase22.py  test_phase23.py  test_phase24.py  test_phase25.py  test_phase34.py  test_phase37.py  test_phase38.py  test_phase40_hooks.py  test_phase41_tools.py  test_phase42_release.py  test_phase43_ask_permissions.py  test_phase49_ask_permissions.py  test_phase51_tools.py  test_phase52_approvals.py  test_phase56_tools.py  test_phase57_ui_polish.py  (+40 more)
