[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d2c"
version = "0.1.0"
description = "Python implementation of Claude Code architecture"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pymupdf>=1.23.0",
    "tiktoken>=0.7.0",
    "prompt-toolkit>=3.0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Bundled skill markdown must ship in the wheel (loaded via glob at runtime).
"d2c.skills" = ["*.md"]
